--- a/ChessAI.cabal
+++ b/ChessAI.cabal
@@ -30,7 +30,7 @@ executable ChessAI-exe
     main-is:             Main.hs
 
     -- Modules included in this executable, other than Main.
-    other-modules:       Game
+    other-modules:       ChessLib
                        , GameIO
 
     -- LANGUAGE extensions used by modules in this package.
