--- a/ChessAI.cabal
+++ b/ChessAI.cabal
@@ -31,6 +31,7 @@ executable ChessAI-exe
 
     -- Modules included in this executable, other than Main.
     other-modules:       ChessLib
+                       , Parsing
                        , GameIO
 
     -- LANGUAGE extensions used by modules in this package.
