--- a/ChessAI.cabal
+++ b/ChessAI.cabal
@@ -32,6 +32,7 @@ executable ChessAI-exe
     -- Modules included in this executable, other than Main.
     other-modules:       ChessLib
                        , Parsing
+                       , ChessAI
                        , GameIO
 
     -- LANGUAGE extensions used by modules in this package.
