add random pkg; rm array pkg

--- a/ChessAI.cabal
+++ b/ChessAI.cabal
@@ -40,7 +40,7 @@ executable ChessAI-exe
 
     -- Other library packages from which modules are imported.
     build-depends:       base >=4.12 && <4.13
-                       , array
+                       , random
 
     -- Directories containing source files.
     hs-source-dirs:      src
